[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art/pixil-frame-0 (46).png" type="Texture" id=1]
[ext_resource path="res://things/flashlight.gd" type="Script" id=2]
[ext_resource path="res://Art/cone.png" type="Texture" id=3]
[ext_resource path="res://Sound/Flashlight Dimming.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="flashlight" type="KinematicBody2D" groups=["flashlight"]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 3 )
texture_scale = 1.5
mode = 2
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_filter_smooth = 21.7

[node name="Area2D" type="Area2D" parent="Light2D"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Light2D/Area2D"]
polygon = PoolVector2Array( 0, 0, 384, -248, 384, 264 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="Light2D/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Light2D/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
